--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blockly/plugin-workspace-search": "^4.0.9",
     "@craco/craco": "^6.4.0",
     "@reduxjs/toolkit": "^1.6.2",
     "blockly": "^6.20210701.0",
