--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "scratch-render": "git+https://github.com/LLK/scratch-render.git",
     "web-bluetooth-utils": "^1.1.1"
   },
   "scripts": {
