--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "@reduxjs/toolkit": "^1.6.2",
     "blockly": "^6.20210701.0",
     "cra-template-redux": "1.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3",
-    "scratch-render": "git+https://github.com/LLK/scratch-render.git",
-    "web-bluetooth-utils": "^1.1.1",
     "i18next": "^19.9.0",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.1.1",
-    "react-i18next": "^11.8.8"
+    "mqtt": "^4.2.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.8",
+    "react-redux": "^7.2.6",
+    "react-scripts": "4.0.3",
+    "scratch-render": "git+https://github.com/LLK/scratch-render.git",
+    "web-bluetooth-utils": "^1.1.1"
   },
   "scripts": {
     "start": "craco start",
