--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@craco/craco": "^6.4.0",
     "@monaco-editor/react": "^4.3.1",
     "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.24.0",
     "blockly": "^6.20210701.0",
     "cra-template-redux": "1.0.3",
     "i18next": "^19.9.0",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.1.1",
+    "jwt-decode": "^3.1.2",
     "mqtt": "^4.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "scratch-render": "git+https://github.com/LLK/scratch-render.git",
     "web-bluetooth-utils": "^1.1.1"
   },
