--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 ################## LOCAL ##############################
-# REACT_APP_BASE_URL = 'http://localhost:4000'
+REACT_APP_BASE_URL = 'http://localhost:4000'
 
 
 
@@ -10,4 +10,4 @@
 
 ############### PROD ##############################################
 
-REACT_APP_BASE_URL = 'https://backend.afaqjaved.com'
+# REACT_APP_BASE_URL = 'https://backend.afaqjaved.com'
