--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "redux-persist": "^6.0.0",
     "scratch-render": "git+https://github.com/LLK/scratch-render.git",
     "web-bluetooth-utils": "^1.1.1"
   },
