--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "redux-persist": "^6.0.0",
+    "rimraf": "^3.0.2",
     "scratch-render": "git+https://github.com/LLK/scratch-render.git",
     "web-bluetooth-utils": "^1.1.1"
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "rimraf build && craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
