--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@blockly/plugin-workspace-search": "^4.0.9",
     "@craco/craco": "^6.4.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@monaco-editor/react": "^4.3.1",
+    "@mui/material": "^5.2.5",
     "@reduxjs/toolkit": "^1.6.2",
+    "ace-builds": "^1.4.13",
     "axios": "^0.24.0",
     "blockly": "^6.20210701.0",
     "cra-template-redux": "1.0.3",
@@ -16,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "mqtt": "^4.2.8",
     "react": "^17.0.2",
+    "react-ace": "^9.5.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.8.8",
     "react-redux": "^7.2.6",
