--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
     "react-i18next": "^11.8.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
