--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 ############### PROD ##############################################
 
-REACT_APP_BASE_URL='https://backend.afaqjaved.com'
+REACT_APP_BASE_URL='http://shaheer.afaqjaved.com:4000'
