added shaheer backend

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 
 ################## LOCAL ##############################
-# REACT_APP_BASE_URL='http://localhost:4000'
+#REACT_APP_BASE_URL='http://localhost:4000'
 
 
 
 ############### PROD ##############################################
 
-REACT_APP_BASE_URL='http://shaheer.afaqjaved.com:4000'
+REACT_APP_BASE_URL='https://blockly.backend.shaheer.afaqjaved.com'
