--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 ############### PROD ##############################################
 
-REACT_APP_BASE_URL='https://blockly.backend.shaheer.afaqjaved.com'
+REACT_APP_BASE_URL='https://backend.blockly.afaqjaved.com'
